<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2019, 2023 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0 which is available at
    http://www.eclipse.org/legal/epl-2.0,
    or the Eclipse Distribution License v. 1.0 which is available at
    http://www.eclipse.org/org/documents/edl-v10.php.

    SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause

-->

<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <name>EclipseLink Oracle NoSQL Extension</name>
    <groupId>org.eclipse.persistence</groupId>
    <artifactId>org.eclipse.persistence.oracle.nosql</artifactId>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.eclipse.persistence</groupId>
        <artifactId>org.eclipse.persistence.parent</artifactId>
        <version>4.0.2-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <properties>
        <jdoc.doclint>all,-missing</jdoc.doclint>
        <test-skip-oracle-nosql>${skipTests}</test-skip-oracle-nosql>
    </properties>

    <dependencies>
        <!--Other modules-->
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.core</artifactId>
        </dependency>
        <!--API dependecies-->
        <dependency>
            <groupId>jakarta.resource</groupId>
            <artifactId>jakarta.resource-api</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

        <!--Other libraries dependencies-->
        <!--Oracle proprietary dependencies-->
        <dependency>
            <groupId>com.oracle.kv</groupId>
            <artifactId>oracle-nosql-client</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.oracle.nosql.sdk</groupId>
            <artifactId>nosqldriver</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.messaging</groupId>
            <artifactId>aqapi</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>

    </dependencies>

    <build>
        <!--Filtering enables generate/substitute test properties from Maven into *.xml files.-->
        <testResources>
            <testResource>
                <directory>${integration.test.resources.directory}</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <compilerArgs>
                                <arg>--add-reads</arg>
                                <arg>org.eclipse.persistence.core=ALL-UNNAMED</arg>
                                <arg>--add-reads</arg>
                                <arg>org.eclipse.persistence.oracle.nosql=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-testCompile</id>
                        <configuration>
                            <release>8</release>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>bundle-manifest</id>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                        <configuration>
                            <instructions>
                                <Fragment-Host>org.eclipse.persistence.core</Fragment-Host>
                                <Export-Package>*</Export-Package>
                            </instructions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <additionalOptions>
                        --add-reads org.eclipse.persistence.core=ALL-UNNAMED
                        --add-reads org.eclipse.persistence.oracle.nosql=ALL-UNNAMED
                    </additionalOptions>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jar-tests</id>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jar-test-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!--Oracle Extension related profiles-->
        <profile>
            <id>oracle</id>
            <build>
                <plugins>
                    <!--Run specified tests/test suite-->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <configuration>
                            <!--Set system properties required for tests-->
                            <systemPropertiesFile>${test.properties.file}</systemPropertiesFile>
                            <workingDirectory>${project.build.directory}/test-run</workingDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <id>test-oracle-nosql-sdk</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                                <configuration>
                                    <skipTests>${test-skip-oracle-nosql}</skipTests>
                                    <reportNameSuffix>test-oracle-nosql-sdk</reportNameSuffix>
                                    <includes>
                                        <include>org.eclipse.persistence.testing.tests.eis.nosql.sdk.NoSQLTestSuite</include>
                                        <include>org.eclipse.persistence.testing.tests.jpa.nosql.sdk.NoSQLJPATestSuite</include>
                                    </includes>
                                </configuration>
                            </execution>
                            <execution>
                                <id>test-oracle-nosql</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                                <configuration>
                                    <skipTests>${test-skip-oracle-nosql}</skipTests>
                                    <reportNameSuffix>test-oracle-nosql</reportNameSuffix>
                                    <includes>
                                        <include>org.eclipse.persistence.testing.tests.eis.nosql.NoSQLTestSuite</include>
                                        <include>org.eclipse.persistence.testing.tests.jpa.nosql.NoSQLJPATestSuite</include>
                                    </includes>
                                </configuration>
                            </execution>
                            <execution>
                                <id>test-oracle-aq</id>
                                <goals>
                                    <goal>integration-test</goal>
                                </goals>
                                <configuration>
                                    <skipTests>${test-skip-oracle-nosql}</skipTests>
                                    <reportNameSuffix>test-oracle-aq</reportNameSuffix>
                                    <includes>
                                        <include>org.eclipse.persistence.testing.tests.eis.aq.AQTestSuite</include>
                                    </includes>
                                </configuration>
                            </execution>
                            <execution>
                                <id>verify-integration-tests</id>
                                <goals>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <skip>${integration.test.skip.verify}</skip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>test-oracle-nosql</id>
            <properties>
                <test-skip-oracle-nosql>false</test-skip-oracle-nosql>
            </properties>
        </profile>
        <profile>
            <!-- excluded for codeql build -->
            <id>no-test-deps</id>
            <activation>
                <property>
                    <name>!notests</name>
                </property>
            </activation>
            <dependencies>
                <!--Test dependencies-->
                <dependency>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                    <scope>test</scope>
                </dependency>
                <!--API dependecies-->
                <dependency>
                    <groupId>javax.transaction</groupId>
                    <artifactId>javax.transaction-api</artifactId>
                    <version>1.3</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>javax.jms</groupId>
                    <artifactId>javax.jms-api</artifactId>
                    <version>2.0.1</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.parsson</groupId>
                    <artifactId>parsson</artifactId>
                    <scope>test</scope>
                </dependency>
                <!--JDBC driver dependencies-->
                <dependency>
                    <groupId>com.oracle.database.jdbc</groupId>
                    <artifactId>ojdbc11</artifactId>
                    <scope>test</scope>
                </dependency>
                <!--Other modules-->
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.nosql</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.jpa</artifactId>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.oracle</artifactId>
                    <scope>test</scope>
                </dependency>
                <!--EclipseLink Core test framework-->
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.core.test.framework</artifactId>
                    <scope>test</scope>
                </dependency>
                <!--EclipseLink Core test classes-->
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.core.test</artifactId>
                    <type>test-jar</type>
                    <scope>test</scope>
                </dependency>
                <!--EclipseLink JPA test framework-->
                <dependency>
                    <groupId>org.eclipse.persistence</groupId>
                    <artifactId>org.eclipse.persistence.jpa.test.framework</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
